dist/LineScript-win64-20260615/tests/cases/compile_fail/delete_unknown_var.lsc
main() -> i64 do
  delete ghost
  return 0
end
